[gd_scene load_steps=7 format=3 uid="uid://fcbb6a1xr6d3"]

[ext_resource type="Script" path="res://src/NetworkCompetition/network_competition.gd" id="1_wgkal"]
[ext_resource type="PackedScene" uid="uid://jlkyjmkbpshr" path="res://src/Background/background.tscn" id="2_bg33i"]
[ext_resource type="PackedScene" uid="uid://d2kbd35uuv0p7" path="res://src/Playground/Playground.tscn" id="3_3s8f4"]
[ext_resource type="Script" path="res://src/NetworkCompetition/DiscoveryClients.gd" id="3_fe5a6"]
[ext_resource type="Script" path="res://src/NetworkCompetition/Broadcast.gd" id="4_0uvne"]
[ext_resource type="Script" path="res://src/NetworkCompetition/BroadcastListener.gd" id="5_2uu04"]

[node name="NetworkCompetition" type="Node"]
script = ExtResource("1_wgkal")

[node name="PlayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://src/NetworkCompetition/player.tscn")
spawn_path = NodePath("../PlayersContainer")

[node name="Background" parent="." instance=ExtResource("2_bg33i")]

[node name="PlayersContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NetworkLocalUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="NetworkLocalUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -212.5
offset_top = -20.0
offset_right = 212.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="NetworkLocalUI/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="NetworkLocalUI/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Direct"

[node name="HostBtn" type="Button" parent="NetworkLocalUI/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Host"

[node name="ConnectBtn" type="Button" parent="NetworkLocalUI/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Connect"

[node name="RemoteLineEdit" type="LineEdit" parent="NetworkLocalUI/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
text = "127.0.0.1"

[node name="HBoxContainer2" type="HBoxContainer" parent="NetworkLocalUI/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="NetworkLocalUI/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="NetworkLocalUI/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Discovering Game Clients..."

[node name="DiscoveryClients" type="ItemList" parent="NetworkLocalUI/VBoxContainer/HBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(300, 500)
layout_mode = 2
script = ExtResource("3_fe5a6")

[node name="Playground" parent="." instance=ExtResource("3_3s8f4")]
visible = false

[node name="Background" parent="Playground" index="0"]
visible = false

[node name="VBoxContainer" parent="Playground/MarginContainer" index="0"]
alignment = 2

[node name="Title" parent="Playground/MarginContainer/VBoxContainer/HBoxContainer" index="0"]
text = "Network Competition"

[node name="NextPracticeBtn" parent="Playground/MarginContainer/VBoxContainer/HBoxContainer" index="1"]
visible = false

[node name="KeyboardContainer" parent="Playground/MarginContainer/VBoxContainer" index="4"]
visible = false

[node name="BottomButtonsContainer" parent="Playground/MarginContainer/VBoxContainer" index="5"]
visible = false

[node name="LobbyClients" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Broadcast" type="Node" parent="."]
script = ExtResource("4_0uvne")

[node name="Timer" type="Timer" parent="Broadcast"]
autostart = true

[node name="BroadcastListener" type="Node" parent="."]
script = ExtResource("5_2uu04")

[connection signal="pressed" from="NetworkLocalUI/VBoxContainer/HBoxContainer/HostBtn" to="." method="_on_host_btn_pressed"]
[connection signal="pressed" from="NetworkLocalUI/VBoxContainer/HBoxContainer/ConnectBtn" to="." method="_on_connect_btn_pressed"]
[connection signal="timeout" from="Broadcast/Timer" to="Broadcast" method="_on_timer_timeout"]

[editable path="Playground"]
